fix: cv-wrap width

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 .cv-wrap {
- width: 1024px;
+ max-width: 1024px;
  margin:0 auto;
  color:  black;
  font-size: 16px;
